fixed header spacing

--- a/style.css
+++ b/style.css
@@ -202,8 +202,10 @@ header {
   font-family: 'ProductSans Bold';
 
   margin-left: 20px;
+  margin-bottom: 4px;
   font-weight: 100;
   font-size: 2.8rem;
+  line-height: 1em;
 }
 .full-name span {
   font-family: 'Rubik', Sans-Serif;
@@ -262,14 +264,14 @@ h4 {
   margin-bottom: 5px;
 }
 ul {
-  padding-left: 17px;
+  padding-left: 14px;
   margin-bottom: 40px;
 }
 li {
   color: #777;
 
   font-size: 0.9rem;
-  padding-left: 10px;
+  padding-left: 6px;
 }
 
 .footer {
